src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) double Moments_m00_get(void* self);
extern "C" __declspec(dllexport) void Moments_m00_set(void* self, double val);
extern "C" __declspec(dllexport) double Moments_m10_get(void* self);
extern "C" __declspec(dllexport) void Moments_m10_set(void* self, double val);
extern "C" __declspec(dllexport) double Moments_m01_get(void* self);
extern "C" __declspec(dllexport) void Moments_m01_set(void* self, double val);
extern "C" __declspec(dllexport) double Moments_m20_get(void* self);
extern "C" __declspec(dllexport) void Moments_m20_set(void* self, double val);
extern "C" __declspec(dllexport) double Moments_m11_get(void* self);
extern "C" __declspec(dllexport) void Moments_m11_set(void* self, double val);
extern "C" __declspec(dllexport) double Moments_m02_get(void* self);
extern "C" __declspec(dllexport) void Moments_m02_set(void* self, double val);
extern "C" __declspec(dllexport) double Moments_m30_get(void* self);
extern "C" __declspec(dllexport) void Moments_m30_set(void* self, double val);
extern "C" __declspec(dllexport) double Moments_m21_get(void* self);
extern "C" __declspec(dllexport) void Moments_m21_set(void* self, double val);
extern "C" __declspec(dllexport) double Moments_m12_get(void* self);
extern "C" __declspec(dllexport) void Moments_m12_set(void* self, double val);
extern "C" __declspec(dllexport) double Moments_m03_get(void* self);
extern "C" __declspec(dllexport) void Moments_m03_set(void* self, double val);
extern "C" __declspec(dllexport) double Moments_mu20_get(void* self);
extern "C" __declspec(dllexport) void Moments_mu20_set(void* self, double val);
extern "C" __declspec(dllexport) double Moments_mu11_get(void* self);
extern "C" __declspec(dllexport) void Moments_mu11_set(void* self, double val);
extern "C" __declspec(dllexport) double Moments_mu02_get(void* self);
extern "C" __declspec(dllexport) void Moments_mu02_set(void* self, double val);
extern "C" __declspec(dllexport) double Moments_mu30_get(void* self);
extern "C" __declspec(dllexport) void Moments_mu30_set(void* self, double val);
extern "C" __declspec(dllexport) double Moments_mu21_get(void* self);
extern "C" __declspec(dllexport) void Moments_mu21_set(void* self, double val);
extern "C" __declspec(dllexport) double Moments_mu12_get(void* self);
extern "C" __declspec(dllexport) void Moments_mu12_set(void* self, double val);
extern "C" __declspec(dllexport) double Moments_mu03_get(void* self);
extern "C" __declspec(dllexport) void Moments_mu03_set(void* self, double val);
extern "C" __declspec(dllexport) double Moments_nu20_get(void* self);
extern "C" __declspec(dllexport) void Moments_nu20_set(void* self, double val);
extern "C" __declspec(dllexport) double Moments_nu11_get(void* self);
extern "C" __declspec(dllexport) void Moments_nu11_set(void* self, double val);
extern "C" __declspec(dllexport) double Moments_nu02_get(void* self);
extern "C" __declspec(dllexport) void Moments_nu02_set(void* self, double val);
extern "C" __declspec(dllexport) double Moments_nu30_get(void* self);
extern "C" __declspec(dllexport) void Moments_nu30_set(void* self, double val);
extern "C" __declspec(dllexport) double Moments_nu21_get(void* self);
extern "C" __declspec(dllexport) void Moments_nu21_set(void* self, double val);
extern "C" __declspec(dllexport) double Moments_nu12_get(void* self);
extern "C" __declspec(dllexport) void Moments_nu12_set(void* self, double val);
extern "C" __declspec(dllexport) double Moments_nu03_get(void* self);
extern "C" __declspec(dllexport) void Moments_nu03_set(void* self, double val);
extern "C" __declspec(dllexport) void RotatedRect_Delete(void* self);
extern "C" __declspec(dllexport) void* RotatedRect_New_0();
extern "C" __declspec(dllexport) void* RotatedRect_New_1(cv::Point2f center, cv::Size2f size, float angle);
extern "C" __declspec(dllexport) void* RotatedRect_New_2(cv::Point2f point1, cv::Point2f point2, cv::Point2f point3);
extern "C" __declspec(dllexport) void RotatedRect_points_0(void* self, void* pts);
extern "C" __declspec(dllexport) void RotatedRect_boundingRect_0(void* self, cv::Rect* outVal);
extern "C" __declspec(dllexport) void RotatedRect_boundingRect2f_0(void* self, cv::Rect2f* outVal);
extern "C" __declspec(dllexport) void RotatedRect_center_get(void* self, cv::Point2f* outVal);
extern "C" __declspec(dllexport) void RotatedRect_center_set(void* self, cv::Point2f val);
extern "C" __declspec(dllexport) void RotatedRect_size_get(void* self, cv::Size2f* outVal);
extern "C" __declspec(dllexport) void RotatedRect_size_set(void* self, cv::Size2f val);
extern "C" __declspec(dllexport) float RotatedRect_angle_get(void* self);
extern "C" __declspec(dllexport) void RotatedRect_angle_set(void* self, float val);
extern "C" __declspec(dllexport) void TickMeter_Delete(void* self);
extern "C" __declspec(dllexport) void* TickMeter_New_0();
extern "C" __declspec(dllexport) void TickMeter_start_0(void* self);
extern "C" __declspec(dllexport) void TickMeter_stop_0(void* self);
extern "C" __declspec(dllexport) int64 TickMeter_getTimeTicks_0(void* self);
extern "C" __declspec(dllexport) double TickMeter_getTimeMicro_0(void* self);
extern "C" __declspec(dllexport) double TickMeter_getTimeMilli_0(void* self);
extern "C" __declspec(dllexport) double TickMeter_getTimeSec_0(void* self);
extern "C" __declspec(dllexport) int64 TickMeter_getLastTimeTicks_0(void* self);
extern "C" __declspec(dllexport) double TickMeter_getLastTimeMicro_0(void* self);